test/regtest/goldens/errors/expect_after.ir
function <main> () { ; void
  block {
    label: label(0)
    arg imm(8,i64) 
    call tmp(0,i64) = ф 
    stre local(0,i64) tmp(0,i64) 
    jmp label(1) 
  }
  block {
    label: label(1)
    ret 
  }
}
function ф (local(0)) { ; i64
  block {
    label: label(0)
    load tmp(0,i64) = local(0,i64) 
    + tmp(1,i64) = tmp(0,i64) imm(1,i64) 
    stre local(1,i64) tmp(1,i64) 
    jmp label(1) 
  }
  block {
    label: label(1)
    load tmp(2,i64) = local(1,i64) 
    > tmp(3) = tmp(2,i64) imm(10,i64) 
    arg tmp(3) 
    arg imm(1,ptr to i8) 
    call __ensure 
    load tmp(4,i64) = local(1,i64) 
    ret tmp(4,i64) 
  }
}
